# clirs

./: .gitignore
echoer/: Cargo.toml
echoer/src/: lib.rs  main.rs
echoer/tests/: cli.rs
echoer/tests/expected/: num.n.txt  num.txt
