[package]
name = "echoer"
version = "0.1.0"
description = "Rust version of echo"
authors = ["imMohika"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"